[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OBC-GS"
version = "0.1.0"
description = "A package for the University of Waterloo Orbital Design Team's GS and OBC"
authors = [
    { name = "University of Waterloo Orbital Design Team" }
]
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31",
    "pyserial>=3",
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.6",
    "toml>=0.10.2",
    "loguru>=0.7.3",
    "pyham_ax25>=1.0.2",
    "tinyaes>=1.1.1",
    "pyStuffing>=0.0.4",
    "hypothesis>=6.131.30",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "psycopg[binary]>=3.2.6",
    "pytest-postgresql>=7.0.1"
]

[tool.setuptools]
packages = ["gs", "gs.backend", "obc.tools.python", "interfaces"]
zip_safe = false
include-package-data = true

[tool.setuptools.package-data]
"gs" = ["py.typed"]
"gs.backend" = ["py.typed"]
"obc.tools.python" = ["py.typed"]
"interfaces" = ["py.typed"]

[tool.ruff]
line-length = 88
ignore = ["E", "F", "N", "UP", "SIM", "B", "ANN", "A", "D"]
exclude = ["python_test/*"]

[tool.mypy]
files = ["gs", "gs/backend", "obc/tools/python", "interfaces"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["python_test"]
addopts = "--cov=gs --cov=obc --cov-report=term-missing"

[tool.pre-commit]
repos = [
  { repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "v0.2.0", hooks = [{id = "ruff"}] },
  { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.8.0", hooks = [{id = "mypy"}] },
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.3.0", hooks = [
      {id = "trailing-whitespace"},
      {id = "end-of-file-fixer"}
    ] }
]
